<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:text="@string/question_num"
        android:textColor="#000000"
        android:textSize="26sp" />
    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/radio_group"
        android:layout_toRightOf="@+id/question"
        android:textColor="#000000"
        android:textSize="26sp" />
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MC_A"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MC_B"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MC_C"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MC_D"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#D8E4BC"
        android:text="@string/next"
        android:textColor="#87A96B"
        android:textSize="20sp" />



</RelativeLayout>

